force-app/main/default/objects/Customer_Asset_Shipping_Estimate__c/Customer_Asset_Shipping_Estimate__c.object-meta.xml
<CustomObject>
    <label>Customer Asset Shipping Estimate</label>
    <nameField>
        <displayFormat>ASE-{0}</displayFormat>
        <label>Customer Asset Shipping Estimate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Asset Shipping Estimates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>