force-app/main/default/objects/Customer_Asset_Shipping_Estimate__c/fields/Customer_Asset_Shipping_Summary__c.field-meta.xml
<CustomField>
    <fullName>Customer_Asset_Shipping_Summary__c</fullName>
    <label>Customer Asset Shipping Summary</label>
    <referenceTo>Customer_Asset_Shipping_Summary__c</referenceTo>
    <relationshipLabel>Customer Asset Shipping Estimates</relationshipLabel>
    <relationshipName>Customer_Asset_Shipping_Estimates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>