force-app/main/default/objects/Customer_Asset_Shipping_Estimate__c/fields/Estimated_Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Shipping_Date__c</fullName>
    <label>Estimated Shipping Date</label>
    <type>Date</type>
</CustomField>