force-app/main/default/objects/Customer_Asset_Shipping_Estimate__c/fields/Estimated_Shipping_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Shipping_Quantity__c</fullName>
    <label>Estimated Shipping Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>