force-app/main/default/objects/Customer_Asset_Shipping_Estimate__c/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE if the quantity on this estimate has been invoiced.</description>
    <inlineHelpText>TRUE if the quantity on this estimate has been invoiced.</inlineHelpText>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>