force-app/main/default/objects/Customer_Asset_Shipping_Estimate__c/fields/Quote_Lines_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Quote_Lines_Consumed__c</fullName>
    <label>Quote Lines Consumed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>